Playing youtube videos in AppActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
         computação em nuvem para empresas. A seguir, entenda como o Google Meet funciona, quais são seus
         recursos, planos e preços, além de aprender como iniciar sua própria videoconferência de forma gratuita.
     </string>
+
+    <string name="text_youtube_indication">Veja abaixo um vídeo sobre como o aplicativo funciona:</string>
 </resources>
